# src/window-renderer/src/src/interfaces/windows/windows.type.ts
@@ -1,1 +1,18 @@
-export type WindowType = 'double-leaf' | 'double-fixed' | 'single-opening';
+export type WindowMaterialType =
+  | 'CAS'     // Cassonetto
+  | 'F1A'     // Finestra 1 Anta
+  | 'F2A'     // Finestra 2 Ante
+  | 'FIX'     // Fisso centrale
+  | 'FLD'     // Fisso laterale dx
+  | 'FLS'     // Fisso laterale sx
+  | 'FRO'     // Frontalino
+  | 'PF1A'    // Portafinestra 1 Anta
+  | 'PF2A'    // Portafinestra 2 Ante
+  | 'PRT1A'   // Portoncino 1 Anta
+  | 'PRT2A'   // Portoncino 2 Ante
+  | 'SIL'     // Scorrevole in linea
+  | 'SLA'     // Sopraluce apribile
+  | 'SLF'     // Sopraluce fisso
+  | 'SRAF'    // Scorrevole ribalta con anta fissa
+  | 'SRLA'    // Scorrevole ribalta con laterale apribile
+  | 'VAS';    // Vasistas
